// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackgroundImage /> should call critical fixed images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline-block; opacity: 0.99; width: 100px; height: 100px; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should call critical fluid images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should call multiple critical fixed images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline-block; opacity: 0.99; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64),url(string_of_base64);
            opacity: 0; 
          }
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64),url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should call multiple critical fluid images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64),url(string_of_base64);
            opacity: 0; 
          }
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64),url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should change style.display from 'inherit' to 'inline-block' 1`] = `
<div>
  <div
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    style="position: relative; opacity: 0.99; width: 100px; height: 100px; background-position: center; background-repeat: no-repeat; background-size: cover;"
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      testempty
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should create style tag at fixed with pseudo-elements 1`] = `
<style>
  
          .imageClass.test.gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass.test.gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass.test.gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .imageClass.test.gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
</style>
`;

exports[`<BackgroundImage /> should create style tag with pseudo-elements 1`] = `
<style>
  
          .imageClass.test.gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass.test.gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass.test.gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .imageClass.test.gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
</style>
`;

exports[`<BackgroundImage /> should render fixed size images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline-block; opacity: 0.99; width: 100px; height: 100px; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should render fluid images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should render multiple fluid images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64),url(string_of_base64);
            opacity: 0; 
          }
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64),url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should render stacked fixed size images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline-block; opacity: 0.99; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64),url(string_of_base64);
            opacity: 0; 
          }
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64),url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should render without opacity hack with truthy preserveStackingContext 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass..gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .imageClass..gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should return null without fluid / fixed 1`] = `<div />`;

exports[`<BackgroundImage /> should work with BackgroundColor 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: #fff;
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with another external class 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass test gbi-1393017994-18 gatsby-background-image-test gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass.test.gbi-1393017994-18:before,
.gatsby-background-image-test:before,
          .imageClass.test.gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass.test.gbi-1393017994-18:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .imageClass.test.gbi-1393017994-18:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with fadeIn 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with only classId 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work without classId but className 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass test gbi-1393017994-18 gatsby-image-wrapper"
    id="testid"
    style="position: relative; display: inline; opacity: 0.99; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass.test.gbi-1393017994-18:before,
          .imageClass.test.gbi-1393017994-18:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass.test.gbi-1393017994-18:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .imageClass.test.gbi-1393017994-18:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work without external class 1`] = `
<div>
  <div
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    style="position: relative; opacity: 0.99; background-position: center; background-repeat: no-repeat; background-size: cover;"
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript />
    <h1>
      testempty
    </h1>
  </div>
</div>
`;
